# ForkTreeAI

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  ruff.toml
app/api/v1/: conversations.py
app/core/: config.py  database.py
app/models/: chat.py
app/services/: chat.py  gemini.py
horizon/: .prettierrc  components.json  eslint.config.ts  package-lock.json  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
horizon/app/: app.css  root.tsx  routes.ts
horizon/app/components/chat/: chat-area.tsx  chat-history-list.tsx  chat-item.tsx  create-branch.tsx  create-conversation.tsx  sidebar-rail.tsx
horizon/app/components/common/: page-not-found.tsx  theme-toggle.tsx
horizon/app/components/ui/: avatar.tsx  breadcrumb.tsx  button.tsx  dropdown-menu.tsx  input.tsx  kbd.tsx  popover.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  sonner.tsx  tooltip.tsx  tree-view.tsx
horizon/app/context/: theme-provider.tsx
horizon/app/data/: raw_chats.ts
horizon/app/layouts/: chat-layout.tsx
horizon/app/lib/chat/: helper.ts
horizon/app/routes/: _index.tsx
horizon/app/styles/: global.css  gradient.css  theme.css  variables.css
horizon/app/types/: eslint-plugin-prefer-arrow.d.ts
oblivion/: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml
oblivion/app/: main.py
oblivion/app/api/v1/: conversations.py
oblivion/app/core/: config.py  database.py
oblivion/app/models/: chat.py
oblivion/app/services/: chat.py  gemini.py  message.py
